<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioSesion">

    <EditText
        android:id="@+id/txtusuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autofillHints="@string/usuario"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="210dp"
        android:layout_height="21dp"
        android:text="@string/iusuario"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtusuario" />

    <EditText
        android:id="@+id/txtpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/contraseña"
        android:autofillHints="@string/contraseña"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="211dp"
        android:layout_height="32dp"
        android:text="@string/iconrtraseña"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtpassword"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="168dp"
        android:layout_height="281dp"
        android:contentDescription="@string/logotipoempresa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        app:srcCompat="@drawable/logotipo" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="36dp"
        android:text="@string/isesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnregistrar"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="4dp"
        android:text="@string/bregistrese"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin" />
</androidx.constraintlayout.widget.ConstraintLayout>