<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        android:autofillHints="@string/nombre"/>

    <EditText
        android:id="@+id/txtapellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/apellido"
        android:autofillHints="@string/apellido"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/txtdireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/direeccion"
        android:autofillHints="@string/direeccion"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/txttelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/telefono"
        android:autofillHints="@string/telefono"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/txtemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="E-mail"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/txtcodusuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Usuario"
        android:ems="10"
        android:hint="@string/rusuario"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/txtrpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/rclave"
        android:autofillHints="Clave"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#673AB7"
            android:backgroundTint="#673AB7"
            android:text="@string/sexo"
            android:textColor="#C5CAE9" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbtmasculino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Masculino" />

            <RadioButton
                android:id="@+id/rbtfemenino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Femenino" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/salir"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnGuardar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="Guardar"
            android:text="@string/guardar" />

        <Button
            android:id="@+id/btnConsultar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="consultar"
            android:text="Consultar"
            app:iconTint="@color/purple_500"
            app:rippleColor="#673AB7" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="eliminar"
            android:text="Borrar" />

        <Button
            android:id="@+id/btnActualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="actualizar"
            android:text="Actualizar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </LinearLayout>

    <TextView
        android:id="@+id/txtusuact"
        android:layout_width="229dp"
        android:layout_height="33dp"
        android:text="" />


</LinearLayout>